--- a/docs/style.css
+++ b/docs/style.css
@@ -1,7 +1,13 @@
+
 html{
     padding: 0;
     margin: 0;
-    background-color: #31afde;
+    height: 100%;
+    background-image: url(./img/fondo.png);
+    background-position-y: bottom;
+    background-repeat: no-repeat;
+    background-size: 100% 100%;
+    background-attachment: fixed;
 }
 
 body{
@@ -26,7 +32,7 @@ body{
     background-color: rgba(255, 255, 255, 0.384);
     width: 100%;
     height:fit-content;
-    padding: 30px 0;
+    padding: 30px 10px;
     text-align: center;
     align-content: center;
     color: rgb(0, 0, 0);
@@ -44,6 +50,7 @@ body{
     text-align: right;
     padding-right: 40px;
     padding-left: 50px;
+    background-color: white;
 }
 
 .contenedor-respuestas{
@@ -56,15 +63,24 @@ body{
 }
 
 .rbox{
-    height: fit-content;
-    width: fit-content;
+    height: 60px;
+    width: 60px;
     position: absolute;
     background-color: steelblue;
     left: 0;
     top: 0;
     color: white;
+    text-align: center;
+    display: flex;
+    align-items: center;
+    justify-content: center;
     font-size: 30px;
-    padding: 13px 20px
+}
+
+.rbox h2{
+    display: block;
+    text-align: center;
+    font-size: 30px;
 }
 
 #pregunta1{
@@ -73,5 +89,9 @@ body{
 
 #pregunta2{
     display: none;
+}
+
+.correcta{
+    background-color: white;
 }
 
