--- a/docs/style.css
+++ b/docs/style.css
@@ -27,17 +27,20 @@ body{
     align-items: center;
 }
 
-.pregunta{
+.contenedor-pregunta{
     margin-top: 30px;
     background-color: rgba(255, 255, 255, 0.384);
     width: 100%;
     height:fit-content;
-    padding: 30px 10px;
     text-align: center;
     align-content: center;
-    color: rgb(0, 0, 0);
+}
+
+.pregunta{
     font-family: Arial, Helvetica, sans-serif;
     font-size: 20px;
+    color: rgb(0, 0, 0);
+    padding: 30px 20px;
 }
 
 .respuesta{
@@ -51,6 +54,8 @@ body{
     padding-right: 40px;
     padding-left: 50px;
     background-color: white;
+    color: black;
+    font-size: 15px;
 }
 
 .contenedor-respuestas{
