--- a/docs/style.css
+++ b/docs/style.css
@@ -100,3 +100,23 @@ body{
     background-color: white;
 }
 
+@media (prefers-color-scheme: dark) {
+    .respuesta{
+        background-color: white;
+        color: black;
+    }
+
+    .correcta{
+        background-color: white;
+    }
+
+    .pregunta{
+        color: rgb(0, 0, 0);
+    }
+
+    .contenedor-pregunta{
+        background-color: rgba(255, 255, 255, 0.384);
+    }
+    
+}
+
