--- a/docs/style.css
+++ b/docs/style.css
@@ -13,6 +13,7 @@ html{
 body{
     padding: 0;
     margin: 0;
+    height: 100%;
 }
 
 .logo{
@@ -29,7 +30,7 @@ body{
 
 .contenedor-pregunta{
     margin-top: 30px;
-    background-color: rgba(255, 255, 255, 0.384);
+    background-color: rgba(252, 252, 252, 0.384);
     width: 100%;
     height:fit-content;
     text-align: center;
@@ -39,7 +40,7 @@ body{
 .pregunta{
     font-family: Arial, Helvetica, sans-serif;
     font-size: 20px;
-    color: rgb(0, 0, 0);
+    color: rgb(5, 5, 5);
     padding: 30px 20px;
 }
 
@@ -53,9 +54,9 @@ body{
     text-align: right;
     padding-right: 40px;
     padding-left: 50px;
-    background-color: white;
-    color: black;
-    font-size: 15px;
+    background-color: rgb(252, 252, 252);
+    color: rgb(5, 5, 5);
+    font-size: 20px;
 }
 
 .contenedor-respuestas{
@@ -97,26 +98,40 @@ body{
 }
 
 .correcta{
-    background-color: white;
+    background-color: rgb(252, 252, 252);
 }
 
-@media (prefers-color-scheme: dark) {
-    .respuesta{
-        background-color: white;
-        color: black;
-    }
+.contendor-texto{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    height: 85%;
+    flex-direction: column;
+}
 
-    .correcta{
-        background-color: white;
-    }
+.texto-juego{
+    display: block;
+    font-family: Arial, Helvetica, sans-serif;
+    color: rgb(252, 252, 252);
+    text-align: justify;
+    padding: 0px 30px;
+    font-size: 30px;
+    font-weight: bold;
+}
 
-    .pregunta{
-        color: rgb(0, 0, 0);
-    }
+.boton-volver{
+    border: none;
+    background-color: rgb(252, 252, 252);
+    color: rgb(5, 5, 5);
+    padding: 15px 50px;
+    font-size: 20px;
+    margin-top: 30px;
+    font-family: Arial, Helvetica, sans-serif;
+    text-decoration: none;
+    border-radius: 100px;
+}
 
-    .contenedor-pregunta{
-        background-color: rgba(255, 255, 255, 0.384);
-    }
-    
+.boton-volver:focus{
+    background-color: rgb(197, 197, 197);
 }
 
