--- a/docs/style.css
+++ b/docs/style.css
@@ -57,6 +57,7 @@ body{
     background-color: rgb(252, 252, 252);
     color: rgb(5, 5, 5);
     font-size: 20px;
+    border-radius: 40px;
 }
 
 .contenedor-respuestas{
@@ -81,6 +82,8 @@ body{
     align-items: center;
     justify-content: center;
     font-size: 30px;
+    border-top-left-radius: 30px;
+    border-bottom-left-radius: 30px;
 }
 
 .rbox h2{
