--- a/docs/style.css
+++ b/docs/style.css
@@ -120,7 +120,7 @@ body{
     display: block;
     font-family: Arial, Helvetica, sans-serif;
     color: rgb(252, 252, 252);
-    text-align: justify;
+    text-align: center;
     padding: 0px 30px;
     font-size: 30px;
     font-weight: bold;
