--- a/docs/style.css
+++ b/docs/style.css
@@ -51,7 +51,7 @@ body{
     width: 90%;
     border: none;
     position: relative;
-    text-align: right;
+    text-align: left;
     padding-right: 40px;
     padding-left: 65px;
     background-color: rgb(252, 252, 252);
